--- a/package.json
+++ b/package.json
@@ -1,37 +1,52 @@
 {
-  "name": "url-shortner-shortyfy",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.81.2",
-    "@tanstack/react-table": "^8.21.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.523.0",
-    "mongoose": "^8.16.0",
-    "next": "15.3.4",
-    "prettier": "^3.6.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
-  }
+	"name": "url-shortner-shortyfy",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@tanstack/react-query": "^5.81.2",
+		"@tanstack/react-table": "^8.21.3",
+		"bcryptjs": "^3.0.2",
+		"class-variance-authority": "^0.7.1",
+		"cloudinary": "^2.7.0",
+		"clsx": "^2.1.1",
+		"formidable": "^3.5.4",
+		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.523.0",
+		"mongoose": "^8.16.0",
+		"next": "15.3.4",
+		"nodemailer": "^7.0.4",
+		"prettier": "^3.6.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.3.1",
+		"uuid": "^11.1.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/jsonwebtoken": "^9.0.10",
+		"@types/node": "^20",
+		"@types/nodemailer": "^6.4.17",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.3.4",
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.3.4",
+		"typescript": "^5"
+	}
 }
