--- a/package.json
+++ b/package.json
@@ -9,31 +9,46 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.1.1",
 		"@radix-ui/react-accordion": "^1.2.11",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-menubar": "^1.1.15",
 		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.7",
 		"@tanstack/react-query": "^5.81.2",
+		"@tanstack/react-query-devtools": "^5.81.5",
 		"@tanstack/react-table": "^8.21.3",
+		"axios": "^1.10.0",
 		"bcryptjs": "^3.0.2",
 		"class-variance-authority": "^0.7.1",
 		"cloudinary": "^2.7.0",
 		"clsx": "^2.1.1",
 		"formidable": "^3.5.4",
+		"ipapi.co": "^0.3.0",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.523.0",
 		"mongoose": "^8.16.0",
+		"nanoid": "^5.1.5",
 		"next": "15.3.4",
+		"next-themes": "^0.4.6",
 		"nodemailer": "^7.0.4",
 		"prettier": "^3.6.1",
+		"qr-code-styling": "^1.9.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.59.0",
+		"recharts": "2.15.4",
+		"resend": "^4.7.0",
+		"sonner": "^2.0.5",
 		"tailwind-merge": "^3.3.1",
-		"uuid": "^11.1.0"
+		"ua-parser-js": "^2.0.4",
+		"uuid": "^11.1.0",
+		"zod": "^3.25.71"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
